# EECE4632

./: README.md
HW3/Python/: HW3.ipynb  hw3.ipynb
HW3/Vitis/.wsdata/: clang_dir_map.json
HW3/Vitis/divby13/: compile_commands.json  divby13.cpp  hls_config.cfg  vitis-comp.json
HW3/Vitis/divby13/divby13/: divby13.hlscompile_summary  divby13.hlsrun_package_summary
HW3/Vitis/divby13/divby13/hls/: config.cmdline  hls_data.json
HW3/Vitis/divby13/divby13/hls/impl/misc/drivers/divby13_v1_0/src/: CMakeLists.txt  xdivby13_hw.h
HW3/Vitis/divby13/divby13/reports/: v++_compile_divby13_guidance.html
HW3/Vivado/divby13/: divby13.hwh  divby13.tcl  divby13.xpr
HW3/Vivado/divby13/divby13.cache/wt/: project.wpc  synthesis.wdf
HW3/Vivado/divby13/divby13.runs/.jobs/: vrs_config_1.xml
HW3/Vivado/divby13/divby13.runs/divby13_auto_pc_0_synth_1/: .vivado.begin.rst  divby13_auto_pc_0.dcp  divby13_auto_pc_0.tcl  divby13_auto_pc_0.vds  divby13_auto_pc_0_utilization_synth.pb  divby13_auto_pc_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
HW3/Vivado/divby13/divby13.runs/divby13_divby13_0_0_synth_1/: .vivado.begin.rst  divby13_divby13_0_0.tcl  divby13_divby13_0_0.vds  divby13_divby13_0_0_utilization_synth.pb  divby13_divby13_0_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  (+3 more)
Lab2/: Registers.docx
Lab2/Vitis/adder/: compile_commands.json  hls_config.cfg  vitis-comp.json
Lab2/Vitis/adder/adder/: adder.hlscompile_summary  adder.hlsrun_package_summary
Lab2/Vivado/lab2/: adder.tcl  lab2.xpr
(+535 files in other folders)
